force-app/main/default/objects/Subsidy_Application__c/Subsidy_Application__c.object-meta.xml
<CustomObject>
    <description>Patient subsidy application. Thin scaffold created for INT-009's Assignment__c master-detail; INT-008 will own the full lifecycle (HIC integration, Status transitions, etc.).</description>
    <label>Subsidy Application</label>
    <nameField>
        <displayFormat>APP-{00000}</displayFormat>
        <label>Application Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subsidy Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>