force-app/main/default/objects/Subsidy_Application__c/fields/Adjustment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Adjustment_Reason__c</fullName>
    <label>Adjustment Reason</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>