force-app/main/default/objects/Subsidy_Application__c/fields/Decision_Source__c.field-meta.xml
<CustomField>
    <fullName>Decision_Source__c</fullName>
    <label>Decision Source</label>
    <description>INT-024 — derived: "calculator" when Approved_Amount__c = Proposed_Amount__c, else "manual".</description>
    <type>Text</type>
    <formula>IF(Approved_Amount__c = Proposed_Amount__c, "calculator", "manual")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
</CustomField>