force-app/main/default/objects/Subsidy_Application__c/fields/Medical_History_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Medical_History_Snapshot__c</fullName>
    <label>Medical History Snapshot</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>