force-app/main/default/objects/Subsidy_Application__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subsidy Applications</relationshipLabel>
    <relationshipName>Subsidy_Applications</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>