force-app/main/default/objects/Subsidy_Application__c/fields/Previously_Declined_Practitioners__c.field-meta.xml
<CustomField>
    <fullName>Previously_Declined_Practitioners__c</fullName>
    <description>Comma-separated 18-char Contact Ids of practitioners who have declined/been reassigned off this application. Read by AssignmentSelector. Design Q-design-009-1 (Option A).</description>
    <label>Previously Declined Practitioners</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>