force-app/main/default/objects/Subsidy_Application__c/fields/Proposed_Amount__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Amount__c</fullName>
    <label>Proposed Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>