force-app/main/default/objects/Subsidy_Application__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>EMEA</fullName><default>false</default><label>EMEA</label></value>
            <value><fullName>AMER</fullName><default>false</default><label>AMER</label></value>
            <value><fullName>APAC</fullName><default>false</default><label>APAC</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>