force-app/main/default/objects/Subsidy_Application__c/fields/Transport_Type__c.field-meta.xml
<CustomField>
    <fullName>Transport_Type__c</fullName>
    <label>Transport Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Air</fullName><default>false</default><label>Air</label></value>
            <value><fullName>Rail</fullName><default>false</default><label>Rail</label></value>
            <value><fullName>Road</fullName><default>false</default><label>Road</label></value>
            <value><fullName>Sea</fullName><default>false</default><label>Sea</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>