force-app/main/default/objects/Subsidy_Application__c/fields/Treatment_Type__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Type__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Treatment Type</label>
    <referenceTo>Treatment_Type__c</referenceTo>
    <relationshipLabel>Subsidy Applications</relationshipLabel>
    <relationshipName>Subsidy_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>