force-app/main/default/objects/Subsidy_Application__c/validationRules/Override_Needs_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Override_Needs_Reason</fullName>
    <active>true</active>
    <description>INT-024 — An Adjustment Reason is required when the Approved Amount differs from the Proposed Amount.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Approved_Amount__c)),
  NOT(ISBLANK(Proposed_Amount__c)),
  Approved_Amount__c &lt;&gt; Proposed_Amount__c,
  ISBLANK(Adjustment_Reason__c)
)</errorConditionFormula>
    <errorMessage>An Adjustment Reason is required when the Approved Amount differs from the Proposed Amount.</errorMessage>
</ValidationRule>