force-app/main/default/objects/Subsidy_Application__c/listViews/My_Queue.listView-meta.xml
<ListView>
    <fullName>My_Queue</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Treatment_Type__c</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed</value>
    </filters>
    <label>My Queue</label>
</ListView>