force-app/main/default/objects/Subsidy_Application__c/listViews/Open_Applications.listView-meta.xml
<ListView>
    <fullName>Open_Applications</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Treatment_Type__c</columns>
    <columns>Patient__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Completed,Draft</value>
    </filters>
    <label>Open Applications</label>
</ListView>